--- a/pagedacF.html
+++ b/pagedacF.html
@@ -25,7 +25,7 @@
             justify-content: center;
             align-items: center;
             height: 10vh;
-            background-color: #aea765; 
+            background-color: #e3caab; 
         }
 
         /* Style du conteneur principal */
