--- a/decoupF.html
+++ b/decoupF.html
@@ -25,7 +25,6 @@
             margin: 0 auto;
             padding-bottom: 50px;
         }
-        /* Flexbox container pour aligner les biomes uniformément */
         .biome-container {
             display: flex;
             flex-direction: column;
@@ -58,9 +57,9 @@
             font-size: 1.2rem;
             color: #555;
             flex-grow: 1;
-            overflow-y: auto; /* Ajouté pour faire défiler le contenu */
-            max-height: 180px; /* Limite la hauteur et permet la barre de défilement */
-            padding-right: 15px; /* Espace pour la barre de défilement */
+            overflow-y: auto;
+            max-height: 180px;
+            padding-right: 15px;
         }
         ul {
             list-style-type: none;
@@ -78,7 +77,6 @@
             transform: scale(1.05);
         }
 
-        /* Style pour la flèche de retour */
         .back-btn {
             position: absolute;
             top: 20px;
@@ -98,11 +96,10 @@
             font-size: 1.5rem;
         }
 
-        /* Style pour les Biomes 2 et 4 afin de les rendre défilables */
         .biome2, .biome4 {
-            max-height: 300px; /* Limite la hauteur totale de la section */
-            overflow-y: auto; /* Permet de faire défiler verticalement */
-            padding-right: 15px; /* Pour l'espace de la barre de défilement */
+            max-height: 300px;
+            overflow-y: auto;
+            padding-right: 15px;
         }
     </style>
 </head>
@@ -118,7 +115,7 @@
         <div class="biome-container">
             <!-- Biome 1 : Le Vallon des Cascades -->
             <div class="biome">
-                <h2>Le Vallon des Cascades </h2>
+                <h2><a href="enclosidF.html">Le Vallon des Cascades</a></h2>
                 <div class="animals">
                     <ul>
                         <li>Mouflon / Chèvre naine / Panda roux / Lémurien / Tortue</li>
@@ -132,7 +129,7 @@
 
             <!-- Biome 2 : Le Plateau avec volet déroulant -->
             <div class="biome biome2">
-                <h2>Le Plateau </h2>
+                <h2><a href="enclosidF.html">Le Plateau</a></h2>
                 <div class="animals">
                     <ul>
                         <li>Zèbre</li>
@@ -151,7 +148,7 @@
 
             <!-- Biome 3 : Le Belvédère -->
             <div class="biome">
-                <h2>Le Belvédère </h2>
+                <h2><a href="enclosidF.html">Le Belvédère</a></h2>
                 <div class="animals">
                     <ul>
                         <li>Casoar / Crocodile nain / Suricate / Fennec / Coati / Saïmiri / Tapir</li>
@@ -164,7 +161,7 @@
 
             <!-- Biome 4 : Les Clairières avec volet déroulant -->
             <div class="biome biome4">
-                <h2>Les Clairières </h2>
+                <h2><a href="enclosidF.html">Les Clairières</a></h2>
                 <div class="animals">
                     <ul>
                         <li>Âne de Provence / Dromadaire / Bison / Oryx algazelle / Watusi / Âne de Somalie</li>
@@ -185,7 +182,7 @@
 
             <!-- Biome 5 : Le Bois des Pins -->
             <div class="biome">
-                <h2>Le Bois des Pins </h2>
+                <h2><a href="enclosidF.html">Le Bois des Pins</a></h2>
                 <div class="animals">
                     <ul>
                         <li>Loup d'Europe</li>
@@ -195,7 +192,7 @@
 
             <!-- Biome 6 : La Bergerie des Reptiles -->
             <div class="biome">
-                <h2>La Bergerie des Reptiles </h2>
+                <h2><a href="enclosidF.html">La Bergerie des Reptiles</a></h2>
                 <div class="animals">
                     <ul>
                         <li>Python / Iguane / Tortue</li>
