--- a/pagedacF.html
+++ b/pagedacF.html
@@ -146,7 +146,7 @@
 
         <!-- Liens sous le logo -->
         <div class="nav-links">
-            <a href="parcZ.html">Parcourir Zootopia</a> <!-- Lien existant -->
+            <a href="parcZF.html">Parcourir Zootopia</a> <!-- Lien existant -->
             <a href="decoupF.html">Découvrir le parc</a> <!-- Nouveau lien ajouté -->
             <a href="prepvF.html">Préparer votre visite</a>
             <a href="aproposF.html">À propos</a>
