--- a/pagedacF.html
+++ b/pagedacF.html
@@ -120,16 +120,15 @@
             text-decoration: underline;
         }
 
-        /* Style pour la vidéo en tant que bandeau */
         .video-banner {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 200px; /* Hauteur de la bandeau */
-            overflow: hidden;
-            z-index: -1; /* S'assurer que la vidéo soit derrière le contenu */
-        }
+    position: absolute;
+    top: 150px; /* Décale la vidéo vers le bas */
+    left: 0;
+    width: 100%;
+    height: 200px; /* Hauteur de la bandeau */
+    overflow: hidden;
+    z-index: -1; /* S'assurer que la vidéo soit derrière le contenu */
+}
 
         .video-banner video {
             width: 100%;
